--- a/_posts/2022-01-06-Moving.md
+++ b/_posts/2022-01-06-Moving.md
@@ -3,10 +3,12 @@ title: Moving
 date: 2022-01-06 19:31:17 +0100
 categories: [Blogging]
 tags: [Hashnode, 'GitHub Pages', Jekyll]
+redirects:
+  - /moving
 ---
 
 Hashnode has been hard at work pushing their `web3` tag as well as various NFT hackathons. [This]() [is]() [completely]() [untenable]() [for]() [various]() [reasons](), which means I'm moving my blog to disassociate from that company as much as I can.
 
-For now I'm [a fork](https://github.com/Tamschi/jekyll-theme-chirpy-custom) of [Chirpy Jekyll Theme](https://github.com/cotes2020/jekyll-theme-chirpy#readme)💎, but I'd like to eventually move to [Asteracea](https://github.com/Tamschi/Asteracea#readme)-based templating 🌼🦀.
+For now I'm using [a fork](https://github.com/Tamschi/jekyll-theme-chirpy-custom) of [Chirpy Jekyll Theme](https://github.com/cotes2020/jekyll-theme-chirpy#readme)💎, but I'd like to eventually move to [Asteracea](https://github.com/Tamschi/Asteracea#readme)-based templating 🌼🦀.
 
 I'll update this post with the changes I made to the theme to not break incoming links.
