Updated the post some more and put it in a publishable state

--- a/_posts/2022-01-06-Moving.md
+++ b/_posts/2022-01-06-Moving.md
@@ -2,12 +2,35 @@
 title: Moving
 date: 2022-01-06 19:31:17 +0100
 categories: [Blogging]
-tags: [Hashnode, 'GitHub Pages', Jekyll]
+tags: [Hashnode, Jekyll]
 redirects:
   - /moving
 ---
 
-Hashnode has been hard at work pushing their `web3` tag as well as various NFT hackathons. [This]() [is]() [completely]() [untenable]() [for]() [various]() [reasons](), which means I'm moving my blog to disassociate from that company as much as I can.
+Hashnode unfortunately has been hard at work pushing their `web3` tag, as well as various blockchain and NFT hackathons.
+[This¹](https://twitter.com/jwz/status/1478022085737803776)
+[is](https://twitter.com/MalwareTechBlog/status/1477634870167834625)
+[completely²](https://tante.cc/2021/12/17/the-third-web/)
+[untenable](https://twitter.com/NFTtheft/status/1468352311068037122)
+[for](https://twitter.com/polotek/status/1478766257188925440)
+[various](https://twitter.com/MalwareTechBlog/status/1478082896883712000)
+[reasons](https://twitter.com/MalwareTechBlog/status/1477751495835545602),
+which means I'm moving my blog to disassociate from that company as much as I can.
+
+¹ strong but appropriate language  
+² a longer post explaining the scam(s)
+
+> Side-note:
+>
+> The links above aren't comprehensive regarding my problems with the web3/blockchain/NFT field.
+> I also think engaging in them as a technologist is an absolutely disgusting breach of work ethics in multiple ways.
+>
+> If you're thinking of trying to convince me, please leave.
+> I do not want to waste energy talking to you, I would just block you everywhere, and I would never do business with you.
+>
+> Anyway:
+
+- - -
 
 For now I'm using [a fork](https://github.com/Tamschi/jekyll-theme-chirpy-custom) of [Chirpy Jekyll Theme](https://github.com/cotes2020/jekyll-theme-chirpy#readme)💎, but I'd like to eventually move to [Asteracea](https://github.com/Tamschi/Asteracea#readme)-based templating 🌼🦀.
 
