Added `### Markdown adjustment` section to post Moving

--- a/_posts/2022-01-06-Moving.md
+++ b/_posts/2022-01-06-Moving.md
@@ -121,5 +121,25 @@ There doesn't really seem to be a specific place to put them, so I just created 
 There's a context menu entry to copy the relative path of a(n image) file in Code's file picker.  
 Make sure to prepend `/` if you are using the same theme as me, and to replace `\` with `/` on Windows.
 
+### Markdown adjustment
+
+The markdown parser on Hashnode is non-standard (as far as a standard exists at all for markdown in practice), so parts of your post may render in unexpected way.
+
+For example, I had to made the following adjustment:
+
+```diff
+  > In this post:
++ >
+  > - example configuration
+  > - command line breakdowns
+  > - links to relevant documentation
++
+  - - -
+```
+
+Adding the newline between the title and list wasn't strictly necessary, but fixed a warning given by [markdownlint](https://marketplace.visualstudio.com/items?itemName=DavidAnson.vscode-markdownlint).
+
+Adding a line between the end of the quote block and the divider *was* necessary.
+
 <!--TODO: Note to self: Set canonical URLs in Hashnode after I'm done and the new blog is live, then mention that here. -->
 <!-- TODO: Emit RSS at /rss.xml, and surface that. -->
