--- a/_posts/2022-01-06-Moving.md
+++ b/_posts/2022-01-06-Moving.md
@@ -18,7 +18,7 @@ Hashnode unfortunately has been hard at work pushing their `web3` tag, as well a
 which means I'm moving my blog to disassociate from that company as much as I can.
 
 ¹ strong but appropriate language  
-² a longer post explaining the scam(s)
+² a longer post explaining most of the scam(s) involved
 
 > Side-note:
 >
