--- a/_posts/2022-01-06-Moving.md
+++ b/_posts/2022-01-06-Moving.md
@@ -42,8 +42,8 @@ While this blog is deployed automatically on GitHub Pages when I push a new revi
 it's still much faster to run it locally to edit more-or-less live. (This is actually more convenient than on Hashnode,
 as I can more easily see the markdown source and rendered page side by side.)
 
-Run `bundle` to initialise the lockfile for your blog after running the init script as per the theme instructions.
-You should commit this to Git also, to make sure the site always builds reliably.
+Run `bundle` to initialise the lockfile for your blog after running the init script as per the theme instructions. Additionally run `bundle lock --add-platform x86_64-linux` to make the lockfile compatible with the automatic deployment Action.
+You should commit this lockfile to Git also, to make sure the site always builds reliably.
 
 Afterwards, you can run a live-editable version of the site like this:
 
