--- a/_data/locales/en.yml
+++ b/_data/locales/en.yml
@@ -38,15 +38,18 @@ date_format:
 copyright:
   # Shown at the bottom of the post
   license:
-    template: This post is licensed under :LICENSE_NAME by the author.
-    name: CC BY 4.0
-    link: https://creativecommons.org/licenses/by/4.0/
+    template: |-
+      This post is :LICENSE_NAME for any purpose, unless otherwise noted.
+      It is provided AS IS without any guarantee of correctness beyond those required for legal reasons.
+    name: not licensed
+    link: 'https://creativecommonsusa.org/wp-content/uploads/2018/01/Copyright-and-Open-Licensing-Primer.pdf'
 
   # Displayed in the footer
-  brief: Some rights reserved.
-  verbose: >-
-    Except where otherwise noted, the blog posts on this site are licensed
-    under the Creative Commons Attribution 4.0 International (CC BY 4.0) License by the author.
+  brief: Most rights reserved.
+  verbose: |-
+    Except where otherwise noted, the blog posts on this site are not licensed for redistribution by the author.
+
+    (Feel free to save a copy for personal use, though. You likely don't even need permission for that.)
 
 meta: Powered by :PLATFORM with :THEME theme.
 
