Added Mentions section to post Moving

--- a/_posts/2022-01-06-Moving.md
+++ b/_posts/2022-01-06-Moving.md
@@ -141,5 +141,18 @@ Adding the newline between the title and list wasn't strictly necessary, but fix
 
 Adding a line between the end of the quote block and the divider *was* necessary.
 
+### Mentions
+
+Hashnode allows mentions like this:
+
+```md
+@[Display Name](@handle)
+```
+{: file="Markdown (Hashnode)"}
+
+You can find all instances of this by searching globally for `](@`.
+
+I had used only three mentions in the blog texts proper, so I replaced their target with the full URL manually instead of writing a plugin.
+
 <!--TODO: Note to self: Set canonical URLs in Hashnode after I'm done and the new blog is live, then mention that here. -->
 <!-- TODO: Emit RSS at /rss.xml, and surface that. -->
