Added more sections to post Moving

--- a/_posts/2022-01-06-Moving.md
+++ b/_posts/2022-01-06-Moving.md
@@ -56,6 +56,14 @@ It will tell you the local address to open.
 It can take a moment for file updates to be reflected, even after "...done" first appears.
 If you don't see your changes, refresh the page again or set up automatic refresh in your browser.
 
+### Updating dependencies
+
+Apparently you can do this by running:
+
+```sh
+bundle update
+```
+
 ## Porting posts
 
 Posts seem to only appear if their file name follows the `YYYY-MM-DD-Title.md` schema, so to start porting,
@@ -153,6 +161,27 @@ Hashnode allows mentions like this:
 You can find all instances of this by searching globally for `](@`.
 
 I had used only three mentions in the blog texts proper, so I replaced their target with the full URL manually instead of writing a plugin.
+
+### Embeds
+
+The following syntax shows a preview card on Hashnode, but is non-standard and breaks in the move:
+
+```md
+%[https://blog.schichler.dev/intrusive-smart-pointers-heap-only-types-ckvzj2thw0caoz2s1gpmi1xm8]
+```
+{: file="2021-11-24-Pinning in plain English.md (Hashnode)"}
+
+I tried to bodge a plugin for this, but failed.  
+(I don't know nearly enough efficiently Ruby to figure out how requiring `link_preview` breaks things elsewhere, and `link_preview_generator` depends on conflicting `nokogiri` which means `bundler` gets stuck on Windows.)
+
+For now the plugin just outputs warnings like this:
+
+```text
+Warning: Replacing rich preview `%[https://blog.schichler.dev/intrusive-smart-pointers-heap-only-types-ckvzj2thw0caoz2s1gpmi1xm8]` in C:/Users/Tamme/Documents/Projekte/blog.schichler.dev/_posts/2021-11-24-Pinning in plain English.md with plain link `<https://blog.schichler.dev/intrusive-smart-pointers-heap-only-types-ckvzj2thw0caoz2s1gpmi1xm8>`.
+```
+{: file="stderr"}
+
+Replace the embed with a proper link to fix it.
 
 <!--TODO: Note to self: Set canonical URLs in Hashnode after I'm done and the new blog is live, then mention that here. -->
 <!-- TODO: Emit RSS at /rss.xml, and surface that. -->
