Fixed the one heading link I had

--- a/_posts/2022-01-06-Moving.md
+++ b/_posts/2022-01-06-Moving.md
@@ -183,5 +183,11 @@ Warning: Replacing rich preview `%[https://blog.schichler.dev/intrusive-smart-po
 
 Replace the embed with a proper link to fix it.
 
+### Heading links
+
+Headings' `id=`s are prefixed with `heading-` on hashnode but not in this blog theme.
+
+You can quickly globally find-and-replace `#heading-` with `#`, as long as the former doesn't appear in your posts' text.
+
 <!--TODO: Note to self: Set canonical URLs in Hashnode after I'm done and the new blog is live, then mention that here. -->
 <!-- TODO: Emit RSS at /rss.xml, and surface that. -->
