--- a/_posts/2022-01-06-Moving.md
+++ b/_posts/2022-01-06-Moving.md
@@ -2,7 +2,9 @@
 title: Moving
 date: 2022-01-06 19:31:17 +0100
 categories: [Blogging]
-tags: [Hashnode, Jekyll]
+tags: [Hashnode, Jekyll, ethics]
+preview: I'm leaving Hashnode. Here's why and how.
+pin: true
 redirects:
   - /moving
 ---
