Updated post Moving and deleted tab About

--- a/_posts/2022-01-06-Moving.md
+++ b/_posts/2022-01-06-Moving.md
@@ -38,6 +38,17 @@ For now I'm using [a fork](https://github.com/Tamschi/jekyll-theme-chirpy-custom
 
 I'll update this post with the changes I made to the theme to not break incoming links.
 
+> **Please consider filing a bug report if anything is broken!**
+>
+> My theme customisations are improvised, so I'd greatly appreciate these reports.
+>
+> For general and technical issues: [theme fork issue tracker](https://github.com/Tamschi/jekyll-theme-chirpy-custom/issues)  
+> (Do not file these on the upstream theme! Chances are it's purely my fault.)
+>
+> Broken posts, images and other content-bugs: [individual blog repository issue tracker](https://github.com/Tamschi/blog.schichler.dev/issues)
+>
+> Thank you!
+
 ## Running the blog locally
 
 While this blog is deployed automatically on GitHub Pages when I push a new revision to the `main` branch,
