Updated post Moving

--- a/_posts/2022-01-06-Moving.md
+++ b/_posts/2022-01-06-Moving.md
@@ -49,7 +49,7 @@ I'll update this post with the changes I made to the theme to not break incoming
 >
 > Thank you!
 
-## Running the blog locally
+## Running the Blog Locally
 
 While this blog is deployed automatically on GitHub Pages when I push a new revision to the `main` branch,
 it's still much faster to run it locally to edit more-or-less live. (This is actually more convenient than on Hashnode,
@@ -77,7 +77,7 @@ Apparently you can do this by running:
 bundle update
 ```
 
-## Porting posts
+## Porting Posts
 
 Posts seem to only appear if their file name follows the `YYYY-MM-DD-Title.md` schema, so to start porting,
 you can simply drop the `*.md` files from your Hashnode Git backup into the `_posts/` folder in your blog repository root.
@@ -201,6 +201,13 @@ Replace the embed with a proper link to fix it.
 Headings' `id=`s are prefixed with `heading-` on hashnode but not in this blog theme.
 
 You can quickly globally find-and-replace `#heading-` with `#`, as long as the former doesn't appear in your posts' text.
+
+## RSS Feed
+
+As Hashnode uses `/rss.xml` but Chirpy only comes with `/feed.xml` (Atom), I created a new RSS feed template and included that with my theme fork.
+This means previous feed reader subscriptions won't break, even though the HTML pages currently still only present the Atom feed behind the icon in the bottom left.
+
+Both feeds should have the same content (except for some meta data). I also removed the five-most-recent post limit from the Atom feed.
 
 <!--TODO: Note to self: Set canonical URLs in Hashnode after I'm done and the new blog is live, then mention that here. -->
 <!-- TODO: Emit RSS at /rss.xml, and surface that. -->
