Updated post Moving

--- a/_posts/2022-01-06-Moving.md
+++ b/_posts/2022-01-06-Moving.md
@@ -69,6 +69,9 @@ It will tell you the local address to open.
 It can take a moment for file updates to be reflected, even after "...done" first appears.
 If you don't see your changes, refresh the page again or set up automatic refresh in your browser.
 
+Side-note: You may be able to speed up rebuilds on changes by adding the `--incremental` flag.  
+I'm not sure if there was actually a speed-up though, as the timings are all over the place on my computer.
+
 ### Updating dependencies
 
 Apparently you can do this by running:
@@ -210,4 +213,4 @@ This means previous feed reader subscriptions won't break, even though the HTML 
 Both feeds should have the same content (except for some meta data). I also removed the five-most-recent post limit from the Atom feed.
 
 <!--TODO: Note to self: Set canonical URLs in Hashnode after I'm done and the new blog is live, then mention that here. -->
-<!-- TODO: Emit RSS at /rss.xml, and surface that. -->
+<!-- Emit `referrerpolicy="no-referrer"` on all external images, or adjust this globally. -->
